--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               eaque.
             </p>
             <div class="button">
-              <button>Download CV</button>
+              <button><a href="https://drive.google.com/file/d/14oapRP87Hlvy2sXmHsrYQr7IicpbW38n/view?usp=sharing">Download CV</a></button>
             </div>
           </div>
         </div>
