Updated about me, images

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="text">
           <div class="text-one">Hello,</div>
           <div class="text-two">I'm Venu Gopal</div>
-          <div class="text-three">Full Stack Developer</div>
+          <div class="text-three">Software Developer</div>
           <div class="social-icons">
             <a
               href="https://www.linkedin.com/in/venugopal-kunchepu"
@@ -88,24 +88,23 @@
             <img src="images/newphototrim.png" alt="" />
           </div>
           <div class="right">
-            <div class="topic">Designing Is My Passion</div>
+            <!-- <div class="topic">Designing Is My Passion</div> -->
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Deserunt, porro veritatis pariatur, nobis voluptatem ipsum
-              repellat nemo quisquam error reprehenderit recusandae odio vel,
-              suscipit. Voluptas mollitia accusantium quaerat aspernatur labore
-              dolorum placeat ipsa sint nam perspiciatis eos consectetur
-              veritatis debitis, quis aliquam unde sed maiores sit! Hic
-              molestiae optio iste iure earum amet nostrum quaerat facere quae
-              veniam maiores harum iusto aperiam vel inventore illo voluptatibus
-              voluptates quo impedit voluptatum error vitae, omnis praesentium?
-              Aperiam nulla non, nesciunt fuga rem perferendis alias et,
-              temporibus, distinctio culpa unde a laborum libero ducimus.
-              Facilis veniam sit praesentium, voluptatibus sint maxime iusto
-              eaque.
+              I am a dedicated and an aspiring software developer actively
+              seeking my first opportunity in the tech industry. To gain
+              practical experience, I have worked on several real-time projects
+              that allowed me to apply core development concepts and build
+              functional web applications. Passionate about solving problems
+              through code and continuously improving by learning from hands-on
+              work and collaboration.
             </p>
             <div class="button">
-              <button><a href="https://drive.google.com/file/d/14oapRP87Hlvy2sXmHsrYQr7IicpbW38n/view?usp=sharing">Download CV</a></button>
+              <button>
+                <a
+                  href="https://drive.google.com/file/d/14oapRP87Hlvy2sXmHsrYQr7IicpbW38n/view?usp=sharing"
+                  >Download CV</a
+                >
+              </button>
             </div>
           </div>
         </div>
@@ -169,56 +168,56 @@
         <div class="boxes">
           <div class="box">
             <div class="project-image">
-              <img src="project1.jpg" alt="E-Commerce Project" />
+              <img src="./Images/AI Resume Scanner.png" alt="Ai Resume Scanner" />
             </div>
             <div class="topic">Ai Resume Scanner</div>
             <div class="buttons">
-              <a href="#" class="live-btn">Live</a>
-              <a href="#" class="github-btn">GitHub</a>
+              <a href="https://ai-resume-scanner.streamlit.app/" class="live-btn">Live</a>
+              <a href="https://github.com/Venugopal1807/AI-Resume-Scanner" class="github-btn">GitHub</a>
             </div>
           </div>
 
           <div class="box">
             <div class="project-image">
-              <img src="project2.jpg" alt="Portfolio Website" />
+              <img src="./Images/one.png" alt="Chat Application" />
             </div>
             <div class="topic">Chat Application</div>
             <div class="buttons">
-              <a href="#" class="live-btn">Live</a>
-              <a href="#" class="github-btn">GitHub</a>
+              <a href="https://python-chat-app-isfe.onrender.com/" class="live-btn">Live</a>
+              <a href="https://github.com/Venugopal1807/Python-Chat-App" class="github-btn">GitHub</a>
             </div>
           </div>
 
           <div class="box">
             <div class="project-image">
-              <img src="project3.jpg" alt="Job Portal" />
+              <img src="./Images/two.png" alt="Admin Dashboard" />
             </div>
             <div class="topic">Admin Dashboard</div>
             <div class="buttons">
-              <a href="#" class="live-btn">Live</a>
-              <a href="#" class="github-btn">GitHub</a>
+              <a href="https://react-admin-dashboard-gamma-two.vercel.app/" class="live-btn">Live</a>
+              <a href="https://github.com/Venugopal1807/React-Admin-Dashboard" class="github-btn">GitHub</a>
             </div>
           </div>
 
           <div class="box">
             <div class="project-image">
-              <img src="project4.jpg" alt="Blog Website" />
+              <img src="./Images/gemini.png" alt="Gemini Clone" />
             </div>
             <div class="topic">Gemini Clone</div>
             <div class="buttons">
-              <a href="#" class="live-btn">Live</a>
-              <a href="#" class="github-btn">GitHub</a>
+              <a href="https://gemini-clone-ashy-three.vercel.app/" class="live-btn">Live</a>
+              <a href="https://github.com/Venugopal1807/Gemini-Clone" class="github-btn">GitHub</a>
             </div>
           </div>
 
           <div class="box">
             <div class="project-image">
-              <img src="project5.jpg" alt="AI Chatbot" />
+              <img src="./Images/portfolio image.png" alt="Portfolio Website" />
             </div>
             <div class="topic">Portfolio Website</div>
             <div class="buttons">
-              <a href="#" class="live-btn">Live</a>
-              <a href="#" class="github-btn">GitHub</a>
+              <a href="https://venugopalk.netlify.app/" class="live-btn">Live</a>
+              <a href="https://github.com/Venugopal1807/Portfolio-Website" class="github-btn">GitHub</a>
             </div>
           </div>
 
