Added description for projects

--- a/index.html
+++ b/index.html
@@ -164,15 +164,12 @@
               <img src="./Images/AI Resume Scanner.png" alt="Ai Resume Scanner" />
             </div>
             <div class="topic">Ai Resume Scanner</div>
+            <p class="project-description">
+              A web tool utilizing AI to scan resumes, extract key information, and provide insights for job applications.
+            </p>
             <div class="buttons">
-              <a href="https://ai-resume-scanner.streamlit.app/" class="live-btn"
-                >Live</a
-              >
-              <a
-                href="https://github.com/Venugopal1807/AI-Resume-Scanner"
-                class="github-btn"
-                >GitHub</a
-              >
+              <a href="https://ai-resume-scanner.streamlit.app/" class="live-btn">Live</a>
+              <a href="https://github.com/Venugopal1807/AI-Resume-Scanner" class="github-btn">GitHub</a>
             </div>
           </div>
 
@@ -181,15 +178,12 @@
               <img src="./Images/one.png" alt="Chat Application" />
             </div>
             <div class="topic">Chat Application</div>
+            <p class="project-description">
+              A real-time chat application built with Python, enabling instant messaging between users.
+            </p>
             <div class="buttons">
-              <a href="https://python-chat-app-isfe.onrender.com/" class="live-btn"
-                >Live</a
-              >
-              <a
-                href="https://github.com/Venugopal1807/Python-Chat-App"
-                class="github-btn"
-                >GitHub</a
-              >
+              <a href="https://python-chat-app-isfe.onrender.com/" class="live-btn">Live</a>
+              <a href="https://github.com/Venugopal1807/Python-Chat-App" class="github-btn">GitHub</a>
             </div>
           </div>
 
@@ -198,17 +192,12 @@
               <img src="./Images/two.png" alt="Admin Dashboard" />
             </div>
             <div class="topic">Admin Dashboard</div>
+            <p class="project-description">
+              A comprehensive administrative dashboard developed with React, offering data visualization and management features.
+            </p>
             <div class="buttons">
-              <a
-                href="https://react-admin-dashboard-gamma-two.vercel.app/"
-                class="live-btn"
-                >Live</a
-              >
-              <a
-                href="https://github.com/Venugopal1807/React-Admin-Dashboard"
-                class="github-btn"
-                >GitHub</a
-              >
+              <a href="https://react-admin-dashboard-gamma-two.vercel.app/" class="live-btn">Live</a>
+              <a href="https://github.com/Venugopal1807/React-Admin-Dashboard" class="github-btn">GitHub</a>
             </div>
           </div>
 
@@ -217,15 +206,12 @@
               <img src="./Images/gemini.png" alt="Gemini Clone" />
             </div>
             <div class="topic">Gemini Clone</div>
+            <p class="project-description">
+              A functional clone of the Gemini AI interface, demonstrating UI/UX and API integration.
+            </p>
             <div class="buttons">
-              <a href="https://gemini-clone-ashy-three.vercel.app/" class="live-btn"
-                >Live</a
-              >
-              <a
-                href="https://github.com/Venugopal1807/Gemini-Clone"
-                class="github-btn"
-                >GitHub</a
-              >
+              <a href="https://gemini-clone-ashy-three.vercel.app/" class="live-btn">Live</a>
+              <a href="https://github.com/Venugopal1807/Gemini-Clone" class="github-btn">GitHub</a>
             </div>
           </div>
 
@@ -234,15 +220,12 @@
               <img src="./Images/portfolio image.png" alt="Portfolio Website" />
             </div>
             <div class="topic">Portfolio Website</div>
+            <p class="project-description">
+              The responsive personal portfolio website showcasing skills, projects, and contact information.
+            </p>
             <div class="buttons">
-              <a href="https://venugopalk.netlify.app/" class="live-btn"
-                >Live</a
-              >
-              <a
-                href="https://github.com/Venugopal1807/Portfolio-Website"
-                class="github-btn"
-                >GitHub</a
-              >
+              <a href="https://venugopalk.netlify.app/" class="live-btn">Live</a>
+              <a href="https://github.com/Venugopal1807/Portfolio-Website" class="github-btn">GitHub</a>
             </div>
           </div>
 
@@ -251,6 +234,9 @@
               <img src="project6.jpg" alt="Social Media App" />
             </div>
             <div class="topic">Social Media App</div>
+            <p class="project-description">
+              A prototype social media application, designed for user interaction and content sharing.
+            </p>
             <div class="buttons">
               <a href="#" class="live-btn">Live</a>
               <a href="#" class="github-btn">GitHub</a>
